crates/cribo/tests/snapshots/bundled_code@entry_module_circular_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/entry_module_circular_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _ModuleType=_cribo.types.ModuleType, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False) or _getattr(module, '_cribo_failed_life', False) or _getattr(module, '__initialized__', False) and _getattr(module, '_cribo_registered', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _ModuleType(spec.name)
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                fresh._cribo_fresh_life = True
                return fresh
            return module
        module = _ModuleType(spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _getattr=getattr, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        record_snapshot = not _getattr(module, '_cribo_fresh_life', False) and not _getattr(module, '__initialized__', False) and (self._namespace is not None or self._entry[1] is not None)
        if init is None:
            if record_snapshot and key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if record_snapshot and key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
                module._cribo_failed_life = True
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._registry = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        entry = init, namespace, is_package, exports or {}
        self._targets[name] = entry
        self._registry[name] = entry

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None, *, _getattr=getattr, _globals=globals):
        entry = self._targets.get(name)
        if entry is None:
            return None
        parent_name = name.rpartition('.')[0]
        if parent_name:
            parent = _sys.modules.get(parent_name)
            expected = self._namespaces.get(parent_name)
            if expected is None:
                parent_entry = self._registry.get(parent_name)
                if parent_entry is not None and parent_entry[1] is not None:
                    expected = _globals().get(parent_entry[1])
            if parent is not None and expected is not None and parent is not expected and not _getattr(parent, '_cribo_fresh_life', False) and not _getattr(parent, '_cribo_machinery_loaded', False):
                return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
_cribo_finder_local._registry = _cribo_finder._registry
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('child_with_init', '_cribo_init___cribo_651687_child_with_init', 'child_with_init', False)
_cribo_finder_local.register('main', '_cribo_init___cribo_24f0c8_main', 'main', False)
child_with_init = _cribo.types.SimpleNamespace(__name__='child_with_init', __initializing__=False, __initialized__=False)
_cribo_finder.bind('child_with_init', child_with_init)
main = _cribo.types.SimpleNamespace(__name__='main', __initializing__=False, __initialized__=False)
_cribo_finder.bind('main', main)
_cribo_child_with_init__initialized = None
def _cribo_init___cribo_651687_child_with_init(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    try:
        _cribo_self.__package__ = ''
        _cribo_self.__doc__ = 'Child module with initialization code that imports from parent (circular dependency).'
        global _cribo_child_with_init__initialized
        global main
        """Child module with initialization code that imports from parent (circular dependency)."""
        TYPE_CHECKING = _cribo.typing.TYPE_CHECKING
        _cribo_self.TYPE_CHECKING = TYPE_CHECKING
        if _cribo.typing.TYPE_CHECKING:
            Any = _cribo.typing.Any
            child_with_init.Any = Any
        main = _cribo_init___cribo_24f0c8_main(main)
        _cribo_self.main = main

        class ConsoleUser:
            """Class that needs to use parent module's function."""

            @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'child_with_init'), _cribo_f)[1])
            def use_console(self):
                """Use the console function from parent module."""
                console = main.get_console()
                return f"Using console: {console}"
        ConsoleUser.__module__ = 'child_with_init'
        ConsoleUser.__qualname__ = 'ConsoleUser'
        _cribo_self.ConsoleUser = ConsoleUser
        _initialized = False
        _cribo_child_with_init__initialized = _initialized
        _cribo_self._initialized = _cribo_child_with_init__initialized

        def _init():
            global _cribo_child_with_init__initialized
            if not _cribo_child_with_init__initialized:
                _cribo_child_with_init__initialized = True
                if _cribo.typing.TYPE_CHECKING:
                    pass
        _init.__module__ = 'child_with_init'
        _init.__qualname__ = '_init'
        _cribo_self._init = _init
        _init()
        _cribo_self.TYPE_CHECKING = _cribo.typing.TYPE_CHECKING
        _cribo_self.__initialized__ = True
        _cribo_self.__initializing__ = False
        return _cribo_self
    except _cribo_base_exception:
        _cribo_self.__initializing__ = False
        raise
child_with_init.__init__ = _cribo_init___cribo_651687_child_with_init
def _cribo_init___cribo_24f0c8_main(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    try:
        _cribo_self.__package__ = ''
        _cribo_self.__doc__ = 'Entry module with a child that imports back from it (circular dependency).'
        global child_with_init
        """Entry module with a child that imports back from it (circular dependency)."""
        child_with_init = _cribo_init___cribo_651687_child_with_init(child_with_init)
        _cribo_self.child_with_init = child_with_init

        def get_console():
            """Function that should be accessible from child module."""
            return "console object"
        get_console.__module__ = 'main'
        get_console.__qualname__ = 'get_console'
        _cribo_self.get_console = get_console

        def main():
            """Main function."""
            obj = child_with_init.ConsoleUser()
            return obj.use_console()
        main.__module__ = 'main'
        main.__qualname__ = 'main'
        _cribo_self.main = main
        if _cribo_self.__name__ == "__main__":
            print(f"Result: {main()}")
        _cribo_self.__initialized__ = True
        _cribo_self.__initializing__ = False
        return _cribo_self
    except _cribo_base_exception:
        _cribo_self.__initializing__ = False
        raise
main.__init__ = _cribo_init___cribo_24f0c8_main
"""Entry module with a child that imports back from it (circular dependency)."""
child_with_init = _cribo_init___cribo_651687_child_with_init(child_with_init)
def get_console():
    """Function that should be accessible from child module."""
    return "console object"
def main_main():
    """Main function."""
    obj = child_with_init.ConsoleUser()
    return obj.use_console()
if __name__ == "__main__":
    print(f"Result: {main_main()}")
